force-app/main/default/objects/Site_Decommission__c/fields/LL_info_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>LL_info_Received_Date__c</fullName>
    <label>LL info Received Date</label>
    <type>Date</type>
</CustomField>