force-app/main/default/objects/Site_Decommission__c/fields/LL_Permit_Sig_List_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>LL_Permit_Sig_List_Sent_Date__c</fullName>
    <label>LL Permit Sig List Sent Date</label>
    <type>Date</type>
</CustomField>