force-app/main/default/objects/Site_Decommission__c/fields/LL_Permit_Sig_Required__c.field-meta.xml
<CustomField>
    <fullName>LL_Permit_Sig_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LL Permit Sig Required</label>
    <type>Checkbox</type>
</CustomField>