force-app/main/default/objects/Site_Decommission__c/fields/MLA_Flag__c.field-meta.xml
<CustomField>
    <fullName>MLA_Flag__c</fullName>
    <formula>Divestiture_Site__r.MLA_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Called Landlord Type in SV.  Pulled from the Divestiture Site Record based on the landlord.</inlineHelpText>
    <label>MLA Flag</label>
    <type>Checkbox</type>
</CustomField>