force-app/main/default/objects/Site_Decommission__c/fields/MLA_LL_NTP_Received__c.field-meta.xml
<CustomField>
    <fullName>MLA_LL_NTP_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLA/LL NTP Received</label>
    <type>Checkbox</type>
</CustomField>