force-app/main/default/objects/Site_Decommission__c/fields/MLA_LL_NTP_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>MLA_LL_NTP_Received_Date__c</fullName>
    <inlineHelpText>Enter 1/1/1900 in place of NA or other text.</inlineHelpText>
    <label>MLA/LL NTP Received Date</label>
    <type>Date</type>
</CustomField>