force-app/main/default/objects/Site_Decommission__c/fields/MLA_LL_NTP_Request__c.field-meta.xml
<CustomField>
    <fullName>MLA_LL_NTP_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this box is checked someone is notified to request the NTP and LL Lease ID for the site.</inlineHelpText>
    <label>MLA/LL NTP Request</label>
    <type>Checkbox</type>
</CustomField>