force-app/main/default/objects/Site_Decommission__c/fields/MLA_LL_NTP_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>MLA_LL_NTP_Requested_Date__c</fullName>
    <label>MLA/LL NTP Requested  Date</label>
    <type>Date</type>
</CustomField>