force-app/main/default/objects/Site_Decommission__c/fields/MLA_NTP_Notes__c.field-meta.xml
<CustomField>
    <fullName>MLA_NTP_Notes__c</fullName>
    <label>MLA NTP Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>