force-app/main/default/objects/Site_Decommission__c/fields/MLA_NTP_Status__c.field-meta.xml
<CustomField>
    <fullName>MLA_NTP_Status__c</fullName>
    <label>MLA NTP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>NTP Requested</fullName>
            </value>
            <value>
                <fullName>Pending – MLA Approval</fullName>
            </value>
            <value>
                <fullName>Pending – Required Docs</fullName>
            </value>
            <value>
                <fullName>Pending – Rooftop LL approval</fullName>
            </value>
            <value>
                <fullName>Pending – Migratory Bird approval</fullName>
            </value>
            <value>
                <fullName>NTP Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>