force-app/main/default/objects/Site_Decommission__c/fields/Monitoring_Trustee_Delay_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Trustee_Delay_Reason_Code__c</fullName>
    <label>Monitoring Trustee Delay Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backhaul</fullName>
            </value>
            <value>
                <fullName>Building/ tower access restrictions</fullName>
            </value>
            <value>
                <fullName>Dish extension request</fullName>
            </value>
            <value>
                <fullName>Dish has accepted this site and we are in the process of closing on the transfer.</fullName>
            </value>
            <value>
                <fullName>General Contractor delay/ availability</fullName>
            </value>
            <value>
                <fullName>Landlord Notice to Proceed</fullName>
            </value>
            <value>
                <fullName>Landlord violation delay</fullName>
            </value>
            <value>
                <fullName>Lease termination negotiations/ finalization</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Logical Decommissioning Date Change</fullName>
            </value>
            <value>
                <fullName>Migratory Birds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Permitting/ Jurisdictional delay</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Update to be provided in (future month) report</fullName>
            </value>
            <value>
                <fullName>Weather Delays</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>