force-app/main/default/objects/Site_Decommission__c/fields/Must_Deconstruct_by__c.field-meta.xml
<CustomField>
    <fullName>Must_Deconstruct_by__c</fullName>
    <formula>IF( AND( ISNULL( Divestiture_Site__r.Notice_of_Decom_NOD__c ), ISNULL(  Must_Deconstruct_by_Leasing__c  )),NULL,
IF(Divestiture_Site__r.Notice_of_Decom_NOD__c   &lt;=   Must_Deconstruct_by_Leasing__c ,Divestiture_Site__r.Notice_of_Decom_NOD__c,
 Must_Deconstruct_by_Leasing__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the lesser of the Notice of Decom date or the Must Deconstruct by (Leasing)</inlineHelpText>
    <label>Must Deconstruct by</label>
    <type>Date</type>
</CustomField>