force-app/main/default/objects/Site_Decommission__c/fields/Must_Deconstruct_By_Decon__c.field-meta.xml
<CustomField>
    <fullName>Must_Deconstruct_By_Decon__c</fullName>
    <inlineHelpText>Manually entered field for Decon team</inlineHelpText>
    <label>Must Deconstruct By (Decon)</label>
    <type>Date</type>
</CustomField>