force-app/main/default/objects/Site_Decommission__c/fields/Must_Deconstruct_by_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Must_Deconstruct_by_Leasing__c</fullName>
    <label>Must Deconstruct by (Leasing)</label>
    <type>Date</type>
</CustomField>