force-app/main/default/objects/Site_Decommission__c/fields/Must_DX_By_Nat_Decon__c.field-meta.xml
<CustomField>
    <fullName>Must_DX_By_Nat_Decon__c</fullName>
    <inlineHelpText>Field used for manual entry for Decon team.</inlineHelpText>
    <label>Must DX By (National Decon)</label>
    <type>Date</type>
</CustomField>