force-app/main/default/objects/Site_Decommission__c/fields/Notes_From_Excel__c.field-meta.xml
<CustomField>
    <fullName>Notes_From_Excel__c</fullName>
    <inlineHelpText>Notes Imported from Excel Sheet.</inlineHelpText>
    <label>Notes (From Excel)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>