force-app/main/default/objects/Site_Decommission__c/fields/Notice_of_Decommission_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Decommission_Date__c</fullName>
    <formula>Divestiture_Site__r.Notice_of_Decom_NOD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notice of Decommission Date</label>
    <type>Date</type>
</CustomField>