force-app/main/default/objects/Site_Decommission__c/fields/Notice_to_Landlord_Decom__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Landlord_Decom__c</fullName>
    <inlineHelpText>Lease term/Mod Notice to Landlord - Decom
A 4815 - 28</inlineHelpText>
    <label>Notice to Landlord - Decom</label>
    <type>Date</type>
</CustomField>