force-app/main/default/objects/Site_Decommission__c/fields/NTP_Received_from_Leasing_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>NTP_Received_from_Leasing_Team_Date__c</fullName>
    <inlineHelpText>Automated process to fill when NTP received from the leasing team.</inlineHelpText>
    <label>NTP Received from Leasing Team Date</label>
    <type>Date</type>
</CustomField>