force-app/main/default/objects/Site_Decommission__c/fields/NTP_Rq_to_NTP_Rc_Gap__c.field-meta.xml
<CustomField>
    <fullName>NTP_Rq_to_NTP_Rc_Gap__c</fullName>
    <description>time between fields: &quot;MLA/LL NTP Requested Date&quot; and &quot;MLA/LL NTP Received&quot;</description>
    <formula>MLA_LL_NTP_Received_Date__c - MLA_LL_NTP_Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NTP Rq to NTP Rc Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>