force-app/main/default/objects/Site_Decommission__c/fields/NTP_Sent_to_GC__c.field-meta.xml
<CustomField>
    <fullName>NTP_Sent_to_GC__c</fullName>
    <label>NTP Sent to GC</label>
    <type>Date</type>
</CustomField>