force-app/main/default/objects/Site_Decommission__c/fields/NTP_to_DX_Start_Act_Gap__c.field-meta.xml
<CustomField>
    <fullName>NTP_to_DX_Start_Act_Gap__c</fullName>
    <description>time between fields: &quot;NTP Sent to GC&quot; and &quot;DX Start Actual&quot;</description>
    <formula>DX_Start_Actual__c - NTP_Sent_to_GC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NTP to DX Start Act Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>