force-app/main/default/objects/Site_Decommission__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <formula>IF(Deconstruction_Team__c = &apos;National - Lease Only w/Equipment&apos;,IMAGE(&quot;/servlet/servlet.FileDownload?file=0155G000006TePC&quot;, &apos;image alternate text&apos;,35,100),TEXT(Dish_Option__r.Dish_Status__c ))</formula>
    <label>Option</label>
    <type>Text</type>
</CustomField>