force-app/main/default/objects/Site_Decommission__c/fields/Permit_Gap__c.field-meta.xml
<CustomField>
    <fullName>Permit_Gap__c</fullName>
    <description>time between fields: &quot;Permit Requested Date&quot; and &quot;Permit Received Actual Date&quot;</description>
    <formula>Permit_Received_Actual_Date__c - Permit_Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permit Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>