force-app/main/default/objects/Site_Decommission__c/fields/Permit_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Requested_Date__c</fullName>
    <inlineHelpText>Enter 1/1/1900 in place of NA or other text.</inlineHelpText>
    <label>Permit Requested Date</label>
    <type>Date</type>
</CustomField>