force-app/main/default/objects/Site_Decommission__c/fields/Permits_Required__c.field-meta.xml
<CustomField>
    <fullName>Permits_Required__c</fullName>
    <inlineHelpText>(Yes)- leave blank if not required</inlineHelpText>
    <label>Permits Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>YES</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>