force-app/main/default/objects/Site_Decommission__c/fields/PM_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Assigned_Date__c</fullName>
    <inlineHelpText>Auto Filled by a Process</inlineHelpText>
    <label>PM Assigned Date</label>
    <type>Date</type>
</CustomField>