force-app/main/default/objects/Site_Decommission__c/fields/PM_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Email__c</fullName>
    <formula>Project_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Email</label>
    <type>Text</type>
</CustomField>