force-app/main/default/objects/Site_Decommission__c/fields/PO_Closed_Out__c.field-meta.xml
<CustomField>
    <fullName>PO_Closed_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Closed Out</label>
    <type>Checkbox</type>
</CustomField>