force-app/main/default/objects/Site_Decommission__c/fields/PO_Comments__c.field-meta.xml
<CustomField>
    <fullName>PO_Comments__c</fullName>
    <label>PO Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>