force-app/main/default/objects/Site_Decommission__c/fields/PO_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Issue_Date__c</fullName>
    <label>PO Issue Date</label>
    <type>Date</type>
</CustomField>