force-app/main/default/objects/Site_Decommission__c/fields/PO_Issue_to_Permit_Req_Gap__c.field-meta.xml
<CustomField>
    <fullName>PO_Issue_to_Permit_Req_Gap__c</fullName>
    <description>time between fields: &quot;PO Issue Date&quot; and &quot;Permit Requested Date&quot;</description>
    <formula>Permit_Requested_Date__c - PO_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Issue to Permit Req Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>