force-app/main/default/objects/Site_Decommission__c/fields/PO_Main_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Main_Type__c</fullName>
    <label>PO Main Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Exceptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>