force-app/main/default/objects/Site_Decommission__c/fields/PO_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Report_Amount__c</fullName>
    <label>PO Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>