force-app/main/default/objects/Site_Decommission__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <label>PO Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>