force-app/main/default/objects/Site_Decommission__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <label>PO Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>