force-app/main/default/objects/Site_Decommission__c/fields/Power_Meter_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Power_Meter_Removal_Date__c</fullName>
    <label>Power Meter Removal Date</label>
    <type>Date</type>
</CustomField>