force-app/main/default/objects/Site_Decommission__c/fields/Power_Meter_Removal_Required__c.field-meta.xml
<CustomField>
    <fullName>Power_Meter_Removal_Required__c</fullName>
    <label>Power Meter Removal Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>