force-app/main/default/objects/Site_Decommission__c/fields/Power_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Power_Termination_Date__c</fullName>
    <label>Power Termination Date</label>
    <type>Date</type>
</CustomField>