force-app/main/default/objects/Site_Decommission__c/fields/Power_Termination_Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>Power_Termination_Notice_Received__c</fullName>
    <label>Power Termination Notice Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>