force-app/main/default/objects/Site_Decommission__c/fields/Pricing_per_Structure__c.field-meta.xml
<CustomField>
    <fullName>Pricing_per_Structure__c</fullName>
    <label>Pricing per Structure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>