force-app/main/default/objects/Site_Decommission__c/fields/PW_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PW_PO_Date__c</fullName>
    <label>PW PO Date</label>
    <type>Date</type>
</CustomField>