force-app/main/default/objects/Site_Decommission__c/fields/Rad_Center_ft__c.field-meta.xml
<CustomField>
    <fullName>Rad_Center_ft__c</fullName>
    <formula>Divestiture_Site__r.Rad_Center_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled From the Divestiture Site Record</inlineHelpText>
    <label>Rad Center (ft)</label>
    <type>Text</type>
</CustomField>