force-app/main/default/objects/Site_Decommission__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>DX Delay Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NTP - Leasing</fullName>
            </value>
            <value>
                <fullName>NTP - MLA/LL</fullName>
            </value>
            <value>
                <fullName>Permitting</fullName>
            </value>
            <value>
                <fullName>Jurisdictional delay</fullName>
            </value>
            <value>
                <fullName>Backhaul Decomissioning</fullName>
            </value>
            <value>
                <fullName>Landlord - Access Restrictions</fullName>
            </value>
            <value>
                <fullName>Power Company</fullName>
            </value>
            <value>
                <fullName>Original Date</fullName>
            </value>
            <value>
                <fullName>Migratory Birds</fullName>
            </value>
            <value>
                <fullName>Reforecast - No Delay</fullName>
            </value>
            <value>
                <fullName>Crane Restrictions</fullName>
            </value>
            <value>
                <fullName>Weather Restrictions</fullName>
            </value>
            <value>
                <fullName>Moved to Retain</fullName>
            </value>
            <value>
                <fullName>Pending Colo Site Off Air</fullName>
            </value>
            <value>
                <fullName>Downstream Dependencies</fullName>
            </value>
            <value>
                <fullName>GC Delay-Pending Crew Availability</fullName>
            </value>
            <value>
                <fullName>Escalation Issue</fullName>
            </value>
            <value>
                <fullName>Landlord - Preferred GC Delay</fullName>
            </value>
            <value>
                <fullName>Landlord - SOW Change</fullName>
            </value>
            <value>
                <fullName>Landlord - Locked Schedule Date</fullName>
            </value>
            <value>
                <fullName>Pending RF Wilt</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Dish divestiture site closing</fullName>
            </value>
            <value>
                <fullName>NTP - Pending PO Exception Adjustment</fullName>
            </value>
            <value>
                <fullName>DX Based On RAN Wilt</fullName>
            </value>
            <value>
                <fullName>Pending GC Confirmation of DX Schedule</fullName>
            </value>
            <value>
                <fullName>Pending GC NTP Issuance</fullName>
            </value>
            <value>
                <fullName>Pending Change Request</fullName>
            </value>
            <value>
                <fullName>Backahaul</fullName>
                <isActive>false</isActive>
                <label>Backahaul</label>
            </value>
            <value>
                <fullName>Backhaul</fullName>
                <isActive>false</isActive>
                <label>Backhaul</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>