force-app/main/default/objects/Site_Decommission__c/fields/RF_Shutdown_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Date_Complete__c</fullName>
    <formula>Divestiture_Site__r.RF_Shutdown_Date_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated for T-Mobile sites only.
From the Divestiture Site Record.</inlineHelpText>
    <label>RF Shutdown Date (Complete)</label>
    <type>Date</type>
</CustomField>