force-app/main/default/objects/Site_Decommission__c/fields/RF_Shutdown_Forecast_Date_Source_System__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Forecast_Date_Source_System__c</fullName>
    <label>RF Shutdown Forecast Date(Source System)</label>
    <type>Date</type>
</CustomField>