force-app/main/default/objects/Site_Decommission__c/fields/Site_Access_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Procedure__c</fullName>
    <label>Site Access Procedure</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>