force-app/main/default/objects/Site_Decommission__c/fields/Site_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Type__c</fullName>
    <label>Site Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#N/A</fullName>
            </value>
            <value>
                <fullName>Advance Notice</fullName>
            </value>
            <value>
                <fullName>Badged Access</fullName>
            </value>
            <value>
                <fullName>Escort Required</fullName>
            </value>
            <value>
                <fullName>Restricted Times</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
            <value>
                <fullName>Written Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>