force-app/main/default/objects/Site_Decommission__c/fields/Site_Audit_Forms__c.field-meta.xml
<CustomField>
    <fullName>Site_Audit_Forms__c</fullName>
    <formula>HYPERLINK(
&quot;https://tmobileusa.sharepoint.com/:x:/r/sites/DECON/_layouts/15/Doc.aspx?sourcedoc=%7B27DEC2D5-33E4-4CFD-A0F0-D46D000049A2%7D&amp;file=Site%20Audit%20Response.xlsx&amp;action=default&amp;mobileredirect=true&quot; ,
&quot;Click to Open Site Audit Excel&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Audit Forms</label>
    <type>Text</type>
</CustomField>