force-app/main/default/objects/Site_Decommission__c/fields/Site_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Site_ID_Text__c</fullName>
    <label>Site ID (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>