force-app/main/default/objects/Site_Decommission__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <formula>Divestiture_Site__r.Site_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Status</label>
    <type>Text</type>
</CustomField>