force-app/main/default/objects/Site_Decommission__c/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Survey</label>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipName>Site_Decommission</relationshipName>
    <type>Lookup</type>
</CustomField>