force-app/main/default/objects/Site_Decommission__c/fields/Specialty_Approval_Permits_Required__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Approval_Permits_Required__c</fullName>
    <label>Specialty Approval/Permits Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LANDMARKS</fullName>
            </value>
            <value>
                <fullName>FDOT</fullName>
            </value>
            <value>
                <fullName>NYSTA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>