force-app/main/default/objects/Site_Decommission__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Divestiture_Site__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled From the Divestiture Site Record</inlineHelpText>
    <label>State</label>
    <type>Text</type>
</CustomField>