force-app/main/default/objects/Site_Decommission__c/fields/Structure_Category__c.field-meta.xml
<CustomField>
    <fullName>Structure_Category__c</fullName>
    <formula>Divestiture_Site__r.Structure_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled From the Divestiture Site Record</inlineHelpText>
    <label>Structure Category</label>
    <type>Text</type>
</CustomField>