force-app/main/default/objects/Site_Decommission__c/fields/Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type__c</fullName>
    <formula>Divestiture_Site__r.Structure_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled From the Divestiture Site Record</inlineHelpText>
    <label>Structure Type</label>
    <type>Text</type>
</CustomField>