force-app/main/default/objects/Site_Decommission__c/fields/T_A4842_FiberDisconnectFOCDecom__c.field-meta.xml
<CustomField>
    <fullName>T_A4842_FiberDisconnectFOCDecom__c</fullName>
    <description>Previous Label: SV Milestone 4842 *** Previous API Name: SV_Milestone_4842

T:(A 4842) Fiber Disconnect Firm Order Commitment (FOC) - Decom</description>
    <inlineHelpText>T:(A 4842) Fiber Disconnect Firm Order Commitment (FOC) - Decom</inlineHelpText>
    <label>T:(A 4842) Fiber Disconnect FOC Decom</label>
    <type>Date</type>
</CustomField>